<resources>
    <string name="app_name">Operaciones Basicas</string>
    <string name="txt_num1">Numero 1</string>
    <string name="txt_num2">Numero 2</string>
    <string name="btn_suma">Suma</string>
    <string name="btn_resta">Restar</string>
    <string name="btn_multiplicacion">Multiplicacion</string>
    <string name="btn_division">Division</string>
    <string name="tv_Resultado">Resultado</string>

</resources>